--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>File Manager</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
     <div class="main-container">
-      <nav id="navbar"></nav>
+      <nav class="navbar">
+        <div class="nav-item">
+          <a href="/upload">UPLOAD</a>
+        </div>
+        <div class="nav-item">
+          <a href="/fileManager">FILEMANAGER</a>
+        </div>
+      </nav>
+
       {{{body}}}
 
     </div>
