--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,8 @@
-<h1>STRONA Z LOGOWANIEM</h1>
+<form action="/login" method="post">
+  <input type="text" name="username" id="username" placeholder="login" />
+  <input type="password" name="password" id="password" placeholder="password" />
+  <input type="submit" value="Log In" />
+</form>
+<div class="error">
+  {{context}}
+</div>
