--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
-<form action="/login" method="post">
+<form action="/login" method="post" id="login-form">
   <input type="text" name="username" id="username" placeholder="login" />
   <input type="password" name="password" id="password" placeholder="password" />
-  <input type="submit" value="Log In" />
+  <input type="submit" value="Log In" id="login-btn" />
 </form>
 <div class="error">
   {{context}}
