--- a/views/partials/listrow.hbs
+++ b/views/partials/listrow.hbs
@@ -1,7 +1,7 @@
 <form class="row">
   <div>{{this.id}}</div>
   <div>
-    {{!-- <div class="icon" style="background-image: url({{this.icon_path}})"></div> --}}
+    <div class="icon" style="background-image: url('{{this.icon_path}}')"></div>
   </div>
   <div><span>{{this.name}}</span></div>
   <div>{{this.size}}</div>
